--- a/src/app.css
+++ b/src/app.css
@@ -3,25 +3,96 @@
 @tailwind utilities;
 
 @layer base {
-  html {
-    --accent: #EBF92F;
-    --primary: #142239;
-  }
-  /* ::-webkit-datetime-edit-month-field:where(:active,:hover,:focus),
-  ::-webkit-datetime-edit-day-field:where(:active,:hover,:focus),
-  ::-webkit-datetime-edit-year-field:where(:active,:hover,:focus) {
-    @apply outline-none bg-accent text-primary;
-  } */
-  /* ::-webkit-calendar-picker-indicator {
-    outline:none;
-    @apply opacity-75 invert relative;
-  } */
-  /* ::-webkit-calendar-picker-indicator:where(:active,:hover,:focus) {
-    filter: invert(73%) sepia(92%) saturate(362%) hue-rotate(14deg)
-    brightness(108%) contrast(102%);
-    @apply opacity-100 text-accent overflow-hidden;
-  } */
+	html {
+		--accent: #EBF92F;
+		--primary: #142239;
+	}
+	/* ::-webkit-datetime-edit-month-field:where(:active,:hover,:focus),
+	::-webkit-datetime-edit-day-field:where(:active,:hover,:focus),
+	::-webkit-datetime-edit-year-field:where(:active,:hover,:focus) {
+		@apply outline-none bg-accent text-primary;
+	} */
+	/* ::-webkit-calendar-picker-indicator {
+		outline:none;
+		@apply opacity-75 invert relative;
+	} */
+	/* ::-webkit-calendar-picker-indicator:where(:active,:hover,:focus) {
+		filter: invert(73%) sepia(92%) saturate(362%) hue-rotate(14deg)
+		brightness(108%) contrast(102%);
+		@apply opacity-100 text-accent overflow-hidden;
+	} */
 }
 
+@layer components {
 
+ [data-field-display] {
+		@apply
+		absolute
+		inset-0
+		leading-none
+		/* interactions */
+		pointer-events-none
+		select-none
+		/* opacity */
+		opacity-0
+		peer-read-only:opacity-100
+		/* text */
+		text-white
+		group-data-[next]:text-primary
+		/* background */
+		bg-[#28364D]
+		peer-focus-within:bg-blue-300/10
+		group-focus:bg-blue-300
+		peer-hover:!bg-blue-300/20
+		group-data-[next]:bg-accent
+		group-data-[next]:peer-focus-within:bg-accent
+		group-data-[next]:peer-hover:!bg-accent/90
+		/* outline on peer focus */
+		rounded-sm
+		outline-blue-400
+		outline-offset-[-1px]
+		peer-focus-within:outline
+		peer-focus-within:outline-1
+		/* next */
+		group-data-[next]:outline-primary
+		group-data-[next]:peer-focus-within:outline-2
+		group-data-[next]:peer-focus-within:outline-offset-[-4px]
+		/* hover */
+
+	}
+	[data-field-input] {
+		@apply
+	/* layout */
+		relative
+		h-full
+		w-full
+		py-1
+		/* text */
+		text-white
+		group-data-[next]:text-accent
+		leading-none
+		truncate
+		/* opacity */
+		opacity-100
+		read-only:opacity-0
+		/* background */
+		bg-primary
+		/* interactions */
+		pointer-events-auto
+		cursor-pointer
+		/* selection */
+		selection:bg-accent
+		selection:text-primary
+		/* border */
+		rounded-sm
+		/* outline on focus */
+		outline-blue-400
+		outline-offset-[-1.5px]
+		outline-[1.5px]
+		group-focus-within:outline
+		/* next */
+		group-data-[next]:outline-accent
+
+	}
+}
 
