--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,7 @@
 
 @layer base {
 	html {
-		--accent: #EBF92F;
+		--accent: #ebf92f;
 		--primary: #142239;
 	}
 	/* ::-webkit-datetime-edit-month-field:where(:active,:hover,:focus),
@@ -24,10 +24,8 @@
 }
 
 @layer components {
-
- [data-field-display] {
-		@apply
-		absolute
+	[data-field-display] {
+		@apply absolute
 		flex
 		items-center
 		inset-0
@@ -61,12 +59,10 @@
 		group-data-[next]:peer-focus-within:outline-lemon-100
 		/* group-data-[next]:peer-focus-within:outline-2 */
 		/* group-data-[next]:peer-focus-within:outline-offset-[-4px] */
-		/* hover */
-
+		/* hover */;
 	}
 	[data-field-input] {
-		@apply
-	/* layout */
+		@apply /* layout */
 		relative
 		h-full
 		w-full
@@ -95,8 +91,6 @@
 		outline-[1.5px]
 		group-focus-within:outline
 		/* next */
-		group-data-[next]:outline-lemon-100
-
+		group-data-[next]:outline-lemon-100;
 	}
 }
-
